# skal-example

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  example.cpp
